# bumppy

./: .gitignore  README.md  pyproject.toml
bumppy/: BumpProject.py  LeanProject.py  Utils.py  bump.py
